# quanergy_client_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-26-pcd-storage-migration/: task.json
.trellis/tasks/archive/2026-06/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-06/06-05-double-click-default-startup/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-05-quanergy-rust-rewrite/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-06-quanergy-client-module-organization/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-06-rust-sdk-architecture-visualizer-split/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-06-tamping-point-cloud-storage/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-06-vitepress-docs/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr1-station-config-transform/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr2-capture-store-station/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr3-storage-reliability/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr4-raw-recorder/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr5-station-visualizer/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr6-hammer-measurement/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-pr7-field-calibration/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-25-tamping-station-y-axis/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-26-pcd-storage-migration/: design.md  implement.md  prd.md  task.json
.trellis/workspace/lyh/: index.md  journal-1.md
apps/capture-store/: Cargo.toml
apps/capture-store/src/: main.rs
apps/sensor-connect-test/: Cargo.toml
apps/sensor-connect-test/src/: main.rs
apps/station-calibrate/: Cargo.toml
apps/station-calibrate/src/: main.rs
apps/tamping-analyzer/: Cargo.toml
apps/tamping-analyzer/src/: main.rs
apps/visualizer/: Cargo.toml
apps/visualizer/src/: lib.rs  main.rs  rerun_sink.rs
apps/visualizer/tests/: replay_visualizer.rs
config/: station.example.toml
crates/quanergy-client/: Cargo.toml
crates/quanergy-client/src/: cloud.rs  config.rs  error.rs  filters.rs  lib.rs  pipeline.rs  replay.rs
crates/quanergy-client/src/config/: device_info.rs  mod.rs  settings.rs  tests.rs  xml.rs
crates/quanergy-client/src/measure/: hammer_roi.rs  height.rs  mod.rs  result.rs
crates/quanergy-client/src/pipeline/: dispatch.rs  helpers.rs  m_series.rs  mod.rs  packet_01.rs  tests.rs
crates/quanergy-client/src/replay/: mod.rs  qraw.rs  sidecar.rs  tests.rs
crates/quanergy-client/src/station/: config.rs  geometry.rs  hammer.rs  mod.rs
crates/quanergy-client/src/storage/: metadata.rs  mod.rs  pcd.rs  qpcd.rs  repository.rs  sqlite.rs  tests.rs
crates/quanergy-client/src/transform/: matrix.rs  mod.rs  pose.rs  tests.rs  validation.rs
docs/: architecture.md  capture-store.md  implementation.md  index.md  package-lock.json  package.json  visualizer.md
docs/.vitepress/: config.mts
docs/zh/: architecture.md  capture-store.md  implementation.md  index.md  pcd-storage-database-plan.md  station-calibration.md  station-coordinate-system.md  tamping-analyzer.md  visualizer.md
src/: error.rs  lib.rs  main.rs  net.rs  visualizer.rs
src/calibration/: mod.rs
src/protocol/: mod.rs
