[package]
name = "capture-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Quanergy station-frame point cloud capture and storage application"
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quanergy-client = { path = "../../crates/quanergy-client" }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "capture-store"
path = "src/main.rs"
