[package]
name = "sensor-connect-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Quanergy sensor connectivity diagnostic tool — prints partial point cloud"
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quanergy-client = { path = "../../crates/quanergy-client" }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "sensor-connect-test"
path = "src/main.rs"
