[package]
name = "tamping-analyzer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Offline tamping-hammer height measurement from capture sessions"
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quanergy-client = { path = "../../crates/quanergy-client" }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "tamping-analyzer"
path = "src/main.rs"
