[package]
name = "quanergy-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Rust rewrite of the Quanergy client SDK packet pipeline"
license.workspace = true

[lib]
name = "quanergy_client"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
quick-xml = "0.40.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "serde"] }
toml = "0.9"
tracing = "0.1"
ureq = "3.1"
