[package]
name = "quanergy-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Rust rewrite of the Quanergy client SDK packet pipeline"
license.workspace = true

[lib]
name = "quanergy_client"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
quick-xml = "0.40.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3.51", features = ["formatting", "local-offset", "macros", "serde"] }
toml = "1.1.2"
tracing = "0.1"
ureq = "3.1"
